backend.yaml
apiVersion: apps/v1 
kind: StatefulSet 
metadata:
  name: backend-deployment 
  namespace: suji 
spec:
  replicas: 1
  minReadySeconds: 10
  selector:
    matchLabels:
      apps: sujithas 
  template:
    metadata:
      labels:
        apps: sujithas 
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: backend-cont 
          image: mongo 
          ports:
            - containerPort: 27017 
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "200m"
              memory: "500Mi"
          volumeMounts:
            - name: my-storage
              mountPath: /data/db
  volumeClaimTemplates:
    metadata:
      - name: my-storage 
    spec:
      accessModes: ["ReadWriteMany"]
      resources:
        requests:
          storage: 2Gi 
      storageClassName: "suji-storage"
