backend-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: backend-service 
  namespace: suji 
spec:
  selector:
    apps: sujithas 
  ports:
    - targetPort: 27017
      port: 27017
  type: ClsuterIP 
  clusterIP: None
