gateway.yaml
apiVersion: gateway.networking.k8s.io/v1 
kind: Gateway 
metadata:
  name: gateway 
  namespace: suji 
spec:
  gatewayClassName: kgateway 
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes: 
        namespaces:
          from: Same
