Httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1 
kind: HTTPRoute 
metadata:
  name: route-sujitha
  namespace: suji 
spec:
  parentRefs:
    - name: gateway 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite 
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: frontend-service
          type: 3000
